--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@
 *.ear
 *.iml
 lib/*
-
+.git/*
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
